--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>welcome</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores blanditiis atque omnis possimus obcaecati praesentium eaque consequatur corporis, ratione tempore, quia, iste non numquam voluptates iure aliquam voluptatem quas consectetur.</p>
 </body>
 </html>
